# 3d-beacons-hub-api

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  coverage.xml  dev-requirements.txt  docker-compose.yml  logging.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.json  tox.ini
.github/workflows/: main.yml
app/: __init__.py  app.py  cli.py  constants.py  exception.py  gunicorn_conf.py  utils.py  version.py
app/annotations/: annotations.py  schema.py
app/cache/: decorator.py  helper.py  redis_cache.py
app/config/: __init__.py  data.json
app/ensembl/: ensembl.py  schema.py
app/health/: health.py  schema.py
app/sequence/: helper.py  schema.py  search.py  sequence.py
app/uniprot/: helper.py  schema.py  uniprot.py
app/worker/: helper.py  worker.py
tests/: conftest.py  test_cli.py  test_health.py  test_hub.py  test_sequence.py  test_utils.py  test_worker.py  utils.py
tests/stubs/: annotations_response.json  gifts_response.json  hit_dictionary.json  registry.json  seq_search_response.json  uniprot.json  uniprot_list_summary.json  uniprot_summary.json
worker/: helper.py  schema.py  worker.py
worker/cache/: redis_cache.py  utils.py
